# vscode-audio-eda

./: .gitignore  .vscodeignore  CHANGELOG.md  INSTALL.md  LICENSE  README.md  ROADMAP.md  TODO.md  package-lock.json  package.json  pyproject.toml  tsconfig.test.json
docs/: METRICS_FORMULAE.md  VS_CODE_API_IMPROVEMENTS.md
examples/custom_filterbank/: simple_triangular_6x16.csv
media/: workbench.css  workbench.js
scripts/: check-prereqs.sh
src/: extension.ts
src/analysis/: metricsCore.ts  metricsExport.ts
src/editor/: audioEdaCustomEditorProvider.ts
src/sidebar/: audioEdaSidebarProvider.ts
src/workbench/: audioWorkbenchPanel.ts  saveTextFile.ts  workbenchHtml.ts  workbenchState.ts
subrepos/python-toolbox/: README.md  TODO.md  pyproject.toml
subrepos/python-toolbox/src/audio_eda_toolbox/: __init__.py  castor.py  cli.py  r_clustering.py
subrepos/python-toolbox/tests/: test_castor.py  test_cli_smoke.py  test_r_clustering.py
subrepos/vscode-extension/: .vscodeignore  INSTALL.md  README.md  ROADMAP.md  TODO.md  package-lock.json  package.json  tsconfig.json
subrepos/vscode-extension/examples/: custom_filterbank_demo.csv  generate_test_tone.py
subrepos/vscode-extension/media/: workbench.css  workbench.js
subrepos/vscode-extension/scripts/: check-prereqs.sh
tests/: README.md
tests/behavioral/: audioKnownQualities.test.ts
tests/helpers/: assert.ts  audioSignals.ts
tests/integration/: metricsPipeline.test.ts  saveRequestFlow.test.ts
tests/unit/: metricsCore.test.ts  metricsExport.test.ts  saveTextFile.test.ts
(+7 files in other folders)
