[project]
authors = [{name = "Johannes Nørskov Toke", email = "johannes@tokes.dk"}]
dependencies = []
name = "audio_eda"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
audio_eda = { path = ".", editable = true }

[tool.pixi.tasks]
